tests/golden/type_errors/array_any_callback_return.err
Type error at 1:31: function `<lambda>` expects return bool, got number
  any([1], fun (value: number): number { return 1; });
                                ^
